@@ -32,6 +32,8 @@ Version 1.9.3
        an outdated or empty log message. (Stefan)
 - BUG: TortoiseIDiff only zoomed one image in overlap mode
        when zooming with the Ctrl-mousewheel. (Stefan)
+- BUG: The tooltip of the tray icon mentioned commit monitor
+       instead of project monitor. (Stefan)
 
 Version 1.9.2
 - BUG: Performance issue if dragging lots of files
